<resources>
    <string name="app_name">TRIVIA_HN</string>
    <string name="BtnAyuda">AYUDA</string>
    <string name="BtnSalir">SALIR</string>
    <string name="BtnModoFacil">MODO FACIL</string>
    <string name="BtnModoDificil">MODO DIFICIL</string>
    <string name="TxtModoJuego">MODO DE JUEGO</string>
    <string name="TxtTriviaHN">TRIVIAHN</string>
    <string name="ImgNombreImagen">ee98b5f8d2f4248f76d6c457f190a414</string>
    <string name="TxtTriviaHN2">TRIVIAHN</string>
    <string name="TxtAyuda">EL JUEGO CONSISTE EN DOS
        NIVELES DE DIFICULTAD:

        FACIL Y DIFICIL

        ¿TE ATREVES AL RETO?

        JUEGA CON TUS AMIGOS Y DEMUESTRA QUIEN ES EL MÁS LISTO

        LAS PREGUNTAS SON DE CULTURA GENERAL DE HONDURAS

    </string>
    <string name="BtnRegresar">Regresar</string>
    <string name="TxtPregunta">Pregunta</string>
    <string name="Rb1">Respuesta1</string>
    <string name="Rb2">Respuesta2</string>
    <string name="Rb3">Respuesta3</string>
    <string name="Rb4">Respuesta4</string>
    <string name="txtByOscar">By Oscar Benites</string>
    <string name="BtnSiguiente">Siguiente</string>


</resources>
