<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
            android:layout_width="453dp"
            android:layout_height="778dp" app:srcCompat="@drawable/ee98b5f8d2f4248f76d6c457f190a414"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            android:contentDescription="@string/ImgNombreImagen"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
    />
    <FrameLayout
            android:layout_width="306dp"
            android:layout_height="458dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="140dp"
            android:background="#31FFFFFF" android:id="@+id/frameLayout">


        <Button
                android:text="@string/BtnModoFacil"
                android:layout_width="281dp"
                android:layout_height="wrap_content" android:id="@+id/BtnModoFacil" android:translationX="13dp"
                android:translationY="180dp" />

        <Button
                android:text="@string/BtnAyuda"
                android:layout_width="101dp"
                android:layout_height="wrap_content" android:id="@+id/BtnAyuda" android:translationX="40dp"
                android:translationY="400dp"/>

        <Button
                android:text="@string/BtnSalir"
                android:layout_width="104dp"
                android:layout_height="wrap_content" android:id="@+id/button2" android:translationX="165dp"
                android:translationY="400dp"/>
        <Button
                android:text="@string/BtnModoDificil"
                android:layout_width="281dp"
                android:layout_height="wrap_content" android:id="@+id/BtnModoDificil" android:translationX="13dp"
                android:translationY="240dp"/>
        <TextView
                android:text="@string/TxtModoJuego"
                android:layout_width="158dp"
                android:layout_height="60dp" android:id="@+id/textView" android:translationX="75sp"
                android:translationY="70sp" android:textAlignment="center" android:fontFamily="sans-serif-black"
                android:textSize="18sp"/>
    </FrameLayout>
    <TextView
            android:text="@string/TxtTriviaHN"
            android:layout_width="294dp"
            android:layout_height="85dp"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout" android:textSize="36sp"
            android:textAlignment="center" android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
</androidx.constraintlayout.widget.ConstraintLayout>