<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModoFacil">

    <ImageView
            android:layout_width="453dp"
            android:contentDescription="@string/ImgNombreImagen"
            android:layout_height="778dp" app:srcCompat="@drawable/ee98b5f8d2f4248f76d6c457f190a414"
            android:id="@+id/imageView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="350dp"
            android:layout_height="171dp"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="25dp"/>
    <RadioGroup
            android:layout_width="341dp"
            android:layout_height="381dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="140dp" app:layout_constraintTop_toTopOf="parent">
        <RadioButton
                android:text="@string/Rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/Rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/Rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton3" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/Rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton4" android:layout_weight="1"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>