<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ayuda">

    <ImageView
            android:layout_width="494dp"
            android:layout_height="785dp" app:srcCompat="@drawable/ee98b5f8d2f4248f76d6c457f190a414"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/ImgNombreImagen"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <FrameLayout
            android:layout_width="344dp"
            android:layout_height="484dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="#30FFFFFF" android:id="@+id/frameLayout2"/>

    <TextView
            android:text="@string/TxtAyuda"
            android:layout_width="328dp"
            android:layout_height="443dp" android:id="@+id/textView4" android:translationX="10dp"
            android:translationY="20dp" android:textSize="30sp" android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="140dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

    <TextView
            android:text="@string/TxtTriviaHN2"
            android:layout_width="304dp"
            android:layout_height="103dp"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout2" android:textAlignment="center"
            android:textSize="36sp" android:fontFamily="sans-serif-black"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <Button
            android:text="@string/BtnRegresar"
            android:layout_width="148dp"
            android:layout_height="61dp"
            android:id="@+id/BtnRegresar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/frameLayout2"/>
    <TextView
            android:text="@string/txtByOscar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="25sp"
            tools:ignore="MissingConstraints" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>